# masseuse

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/example/: CMakeLists.txt  example.cpp
applications/libGUI/: GLPathAbs.h  GLPathRel.h  GLPathSegment.h  gui_common.h
applications/masseuse_gui/: CMakeLists.txt  masseuse_gui-cvars.h  masseuse_gui.cpp
cmake_modules/: FindTinyXML2.cmake
include/masseuse/: AutoDiffLocalParamSE3.h  CeresCostFunctions.h  LocalParameterizationSE3.h  LocalParameterizationSO3.h  TicToc.h  Utils.h  masseuse.h
src/: masseuse.cpp
